@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-03T00:37:00Z",
-  "count_outdated" : 2979,
-  "uniques_outdated" : 975,
-  "count" : 2997,
-  "uniques" : 982,
+  "timestamp" : "2025-04-03T12:13:49Z",
+  "count_outdated" : 2982,
+  "uniques_outdated" : 977,
+  "count" : 2998,
+  "uniques" : 983,
   "views" : [
-    {
-      "timestamp": "2025-03-20T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-03-26T00:00:00Z",
       "count": 3,
@@ -43,6 +34,15 @@
     },
     {
       "timestamp": "2025-03-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-03T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
