@@ -1,12 +1,7 @@
 {
-  "count": 18,
-  "uniques": 7,
+  "count": 16,
+  "uniques": 6,
   "views": [
-    {
-      "timestamp": "2025-03-20T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-03-26T00:00:00Z",
       "count": 3,
@@ -24,6 +19,11 @@
     },
     {
       "timestamp": "2025-03-31T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-04-03T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
